# RMQ

./: AMQP_RabbitMQ.odp
code/: docker-compose.yaml  package.json  tsconfig.json
code/src/: fasz.ts  main.ts
electron-quick-start/: README.md  index.html  live.js  main.js  package-lock.json  package.json  preload.js  renderer.js  some.js  styles.css
electron-quick-start/server/: main.ts  tsconfig.json
electron-quick-start/server/src/: connection.ts
rust/: Cargo.toml
rust/.vim/: coc-settings.json
text/: main.md
