[package]
name = "rabbit-performance-test"
version = "1.0.0"
authors = ["Jozsef Kulcsar <havasjethi@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.21"
lapin = "2.1.1"
tokio = { version = "1.19.2", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.1.1", features = ["v4"] }
